--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
