--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "supabase": "^2.22.6",
