--- a/package.json
+++ b/package.json
@@ -1,65 +1,68 @@
 {
-   "name": "home-service",
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-   },
-   "dependencies": {
-      "@emotion/cache": "^11.14.0",
-      "@emotion/server": "^11.11.0",
-      "@fortawesome/fontawesome-svg-core": "^6.7.2",
-      "@fortawesome/free-brands-svg-icons": "^6.7.2",
-      "@fortawesome/free-regular-svg-icons": "^6.7.2",
-      "@fortawesome/free-solid-svg-icons": "^6.7.2",
-      "@fortawesome/react-fontawesome": "^0.2.2",
-      "@mui/material": "^7.1.0",
-      "@hookform/resolvers": "^5.0.1",
-      "@next/font": "^14.2.15",
-      "@radix-ui/react-dropdown-menu": "^2.1.14",
-      "@supabase/auth-helpers-nextjs": "^0.10.0",
-      "@supabase/auth-helpers-react": "^0.5.0",
-      "@radix-ui/react-popover": "^1.1.13",
-      "@radix-ui/react-select": "^2.2.4",
-      "@radix-ui/react-slider": "^1.3.4",
-      "@supabase/ssr": "^0.6.1",
-      "@supabase/supabase-js": "^2.49.4",
-      "axios": "^1.9.0",
-      "bcrypt": "^5.1.1",
-      "class-variance-authority": "^0.7.1",
-      "clsx": "^2.1.1",
-      "lucide": "^0.507.0",
-      "lucide-react": "^0.507.0",
-      "next": "15.3.1",
-      "radix-ui": "^1.4.1",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "react-hook-form": "^7.56.3",
-      "supabase": "^2.22.6",
-      "swagger": "^0.7.5",
-      "tailwind-merge": "^3.2.0",
-      "zod": "^3.24.4",
+  "name": "home-service",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@next/font": "^14.2.15",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "lucide": "^0.507.0",
+    "lucide-react": "^0.507.0",
+    "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "sonner": "^2.0.3",
-    "uuid": "^11.1.0"
-   },
-   "devDependencies": {
-      "@eslint/eslintrc": "^3",
-      "@tailwindcss/postcss": "^4",
-      "@types/bcrypt": "^5.0.2",
-      "@types/node": "^20",
-      "@types/react": "^19",
-      "@types/react-dom": "^19",
-      "eslint": "^9",
-      "eslint-config-next": "15.3.1",
-      "tailwindcss": "^4",
-      "tw-animate-css": "^1.2.9",
-      "typescript": "^5"
-   }
+    "supabase": "^2.22.6",
+    "swagger": "^0.7.5",
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/server": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^7.1.0",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slider": "^1.3.4",
+    "radix-ui": "^1.4.1"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
+    "typescript": "^5"
+  }
 }
