--- a/package.json
+++ b/package.json
@@ -1,68 +1,62 @@
 {
-  "name": "home-service",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/cache": "^11.14.0",
-    "@emotion/server": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^7.1.0",
-    "@next/font": "^14.2.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slider": "^1.3.4",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "axios": "^1.9.0",
-    "bcrypt": "^6.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "install": "^0.13.0",
-    "lucide": "^0.510.0",
-    "lucide-react": "^0.510.0",
-    "next": "15.3.2",
-    "npm": "^11.3.0",
-    "npm-check-updates": "^18.0.1",
-    "radix-ui": "^1.4.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.3",
-    "supabase": "^2.22.12",
-    "swagger": "^0.7.5",
-    "tailwind-merge": "^3.3.0",
-    "zod": "^3.24.4",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "formidable": "^3.5.4",
-    "next-themes": "^0.4.6",
-    "sonner": "^2.0.3",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.9",
-    "typescript": "^5"
-  }
+   "name": "home-service",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@emotion/cache": "^11.14.0",
+      "@emotion/server": "^11.11.0",
+      "@fortawesome/fontawesome-svg-core": "^6.7.2",
+      "@fortawesome/free-brands-svg-icons": "^6.7.2",
+      "@fortawesome/free-regular-svg-icons": "^6.7.2",
+      "@fortawesome/free-solid-svg-icons": "^6.7.2",
+      "@fortawesome/react-fontawesome": "^0.2.2",
+      "@hookform/resolvers": "^5.0.1",
+      "@mui/material": "^7.1.0",
+      "@next/font": "^14.2.15",
+      "@radix-ui/react-dropdown-menu": "^2.1.14",
+      "@radix-ui/react-popover": "^1.1.13",
+      "@radix-ui/react-select": "^2.2.4",
+      "@radix-ui/react-slider": "^1.3.4",
+      "@supabase/auth-helpers-nextjs": "^0.10.0",
+      "@supabase/auth-helpers-react": "^0.5.0",
+      "@supabase/ssr": "^0.6.1",
+      "@supabase/supabase-js": "^2.49.4",
+      "axios": "^1.9.0",
+      "bcrypt": "^6.0.0",
+      "class-variance-authority": "^0.7.1",
+      "clsx": "^2.1.1",
+      "install": "^0.13.0",
+      "lucide": "^0.510.0",
+      "lucide-react": "^0.510.0",
+      "next": "15.3.2",
+      "npm": "^11.3.0",
+      "npm-check-updates": "^18.0.1",
+      "radix-ui": "^1.4.1",
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0",
+      "react-hook-form": "^7.56.3",
+      "supabase": "^2.22.12",
+      "swagger": "^0.7.5",
+      "tailwind-merge": "^3.3.0",
+      "zod": "^3.24.4"
+   },
+   "devDependencies": {
+      "@eslint/eslintrc": "^3",
+      "@tailwindcss/postcss": "^4",
+      "@types/bcrypt": "^5.0.2",
+      "@types/node": "^22",
+      "@types/react": "^19",
+      "@types/react-dom": "^19",
+      "eslint": "^9",
+      "eslint-config-next": "15.3.2",
+      "tailwindcss": "^4",
+      "tw-animate-css": "^1.2.9",
+      "typescript": "^5"
+   }
 }
