--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@hookform/resolvers": "^5.0.1",
     "@next/font": "^14.2.15",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
@@ -26,9 +29,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "sonner": "^2.0.3",
     "supabase": "^2.22.6",
     "swagger": "^0.7.5",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
