--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.3",
     "supabase": "^2.22.6",
     "swagger": "^0.7.5",
