feat(layout): implement persistent sidebar toggle using useContext and localStorage
- Implemented `SidebarContext` and `SidebarProvider` using `useContext` to manage the `isSidebarOpen` state globally.
- Utilized `array.map` within the sidebar component to dynamically render navigation items, facilitating reuse in different paths like `/technician`.
- Added a toggle button in the `/admin` path to control the `isSidebarOpen` state.
- Persisted the `sidebarOpen` state in `localStorage` to maintain the user's preference across full page reloads.
- Updated sidebar icons to align with the latest designs in Figma.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
