--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "bcrypt": "^6.0.0",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
+      "debounce-async": "^0.0.2",
       "install": "^0.13.0",
       "lucide": "^0.510.0",
       "lucide-react": "^0.510.0",
