--- a/package.json
+++ b/package.json
@@ -26,20 +26,26 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "formidable": "^3.5.4",
     "geolib": "^3.3.4",
@@ -48,18 +54,22 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "promptpay-qr": "^0.5.0",
+    "qrcode": "^1.5.4",
     "radix-ui": "^1.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.3",
+    "react": "^18.0.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.1",
     "supabase": "^2.22.6",
-    "swagger": "^0.7.5",
+    "swagger": "^0.0.1",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4",
+    "zod": "^3.25.30",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -70,7 +80,9 @@
     "@types/formidable": "^3.4.5",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
