--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "geolib": "^3.3.4",
+    "leaflet": "^1.9.4",
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
@@ -44,6 +46,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "sonner": "^2.0.3",
     "supabase": "^2.22.6",
     "swagger": "^0.7.5",
@@ -57,6 +60,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
