chore(logic): add technician job hook and shared session helper
- Add `useTechnicianJobs` hook for accepting/rejecting jobs
- Add `api-helpers` to centralize Supabase session logic
- Add `datetime` for displaying Thai localized datetime

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "formidable": "^3.5.4",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
