Refactor technician history and pending pages
- Removed sidebar context and replaced with ToggleSidebarComponent for better modularity.
- Added search functionality to technician history and pending pages.
- Updated job detail pages to display service request code and formatted phone numbers.
- Introduced new utility functions for phone number formatting and appointment date formatting.
- Implemented Zustand for managing service request count state.
- Enhanced API for completing jobs with proper permission checks and error handling.
- Cleaned up unnecessary code and comments, improving overall readability and maintainability.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "swagger": "^0.7.5",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
