--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
    "github.copilot.enable": {
-      "*": false,
+      "*": true,
       "plaintext": false,
       "markdown": true,
-      "scminput": false
+      "scminput": false,
+      "typescriptreact": true
    }
 }
