feat(ServiceRequestCard): add confirmation modal for job acceptance and rejection fix(types): add total_price field to ServiceRequest interface chore(settings): enable GitHub Copilot for all file types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
       "*": true,
       "plaintext": false,
       "markdown": true,
-      "scminput": false
+      "scminput": false,
+      "typescriptreact": true
    }
 }
